<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_jelly_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="26dp"
        android:paddingBottom="92dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/tv_jelly_description_title"
            style="@style/PretendardSemibold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/jelly_description_title"
            android:textColor="@color/gray700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_jelly_description_type"
            style="@style/PretendardBold24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/jelly_description_type_dummy"
            android:textColor="@color/gray900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_jelly_description_title" />

        <ImageView
            android:id="@+id/iv_jelly_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/img_jelly_description_dummy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_jelly_description_type" />

        <TextView
            android:id="@+id/tv_jelly_description_hashtag"
            style="@style/PretendardBold16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/jelly_description_hashtag_dummy"
            android:textColor="@color/gray900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_jelly_description" />

        <TextView
            android:id="@+id/tv_jelly_description_content"
            style="@style/PretendardMedium14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/jelly_description_content_dummy"
            android:textColor="@color/gray900"
            app:layout_constraintTop_toBottomOf="@id/tv_jelly_description_hashtag" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>