<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.keyneez.presentation.signup.danal.guide.DanalGuideFragment">

    <data>

        <variable
            name="vm"
            type="com.keyneez.presentation.signup.danal.guide.DanalGuideViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_danal_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_danal_guide_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="48dp"
            android:background="@null"
            android:padding="12dp"
            android:src="@drawable/ic_signup_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_danal_guide_description"
            style="@style/PretendardBold24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/danal_guide_description"
            android:textColor="@color/gray900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_danal_guide_back" />

        <EditText
            android:id="@+id/et_danal_guide_name"
            style="@style/PretendardMedium18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="91dp"
            android:background="@drawable/shape_gray400_bottomline_rect"
            android:hint="@string/danal_guide_name_hint"
            android:paddingVertical="18dp"
            android:text="@={vm.userName}"
            android:textColor="@color/gray900"
            android:textColorHint="@color/gray400"
            app:layout_constraintTop_toBottomOf="@id/tv_danal_guide_description" />

        <EditText
            android:id="@+id/et_danal_guide_phone"
            style="@style/PretendardMedium18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_gray400_bottomline_rect"
            android:hint="@string/danal_guide_phone_hint"
            android:inputType="phone"
            android:paddingVertical="18dp"
            android:text="@={vm.phone}"
            android:textColor="@color/gray900"
            android:textColorHint="@color/gray400"
            app:layout_constraintTop_toBottomOf="@id/et_danal_guide_name" />

        <EditText
            android:id="@+id/et_danal_guide_birth"
            style="@style/PretendardMedium18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_gray400_bottomline_rect"
            android:hint="@string/danal_guide_birth_hint"
            android:inputType="number"
            android:paddingVertical="18dp"
            android:text="@={vm.birth}"
            android:textColor="@color/gray900"
            android:textColorHint="@color/gray400"
            app:layout_constraintTop_toBottomOf="@id/et_danal_guide_phone" />

        <TextView
            android:id="@+id/btn_danal_guide_verify"
            style="@style/PretendardBold16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/sel_tendency_next_btn"
            android:enabled="@{vm.userName.length > 0 &amp;&amp; vm.phone.length > 0&amp;&amp; vm.birth.length > 0}"
            android:gravity="center"
            android:onClick="@{() -> vm.postDanalSignup(vm.userName, vm.phone, vm.birth)}"
            android:paddingVertical="15dp"
            android:text="@string/danal_guide_next"
            android:textColor="@color/gray050"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>